# stock-news-app

./: alerts.py  analysis.py  main.py  market_data.py  news_analyzer.py  portfolio.json  portfolio.py  predictions.py  pyproject.toml  sentiment_analyzer.py  test_deepseek.py
