[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "nltk>=3.9.1",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "streamlit>=1.41.1",
    "textblob>=0.19.0",
    "tweepy>=4.15.0",
    "yfinance==0.2.35",
]
